--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
-    "start": "nodemon -e js,ejs"
+    "start": "nodemon -e js,ejs",
+    "strict-build":"node index.js"
   },
   "author": "jin",
   "license": "ISC",
